# shared_memory

./: CMakeLists.txt  README.md
src/: cons.c  prod.c  shm.h
